--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "reselect": "^4.1.7",
     "sass": "1.49.7",
     "styled-components": "5.3.3",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "2.1.4"
   },
@@ -50,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
+    "babel-plugin-macros": "^3.1.0"
   }
 }
