--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.47.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -10,6 +12,8 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "dotenv": "^16.0.3",
     "firebase": "9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +27,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "1.49.7",
+    "stripe": "^11.12.0",
     "styled-components": "5.3.3",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
